downward-api-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-api
  namespace: development
spec:
  containers:
    - name: busybox
      image: registry.k8s.io/busybox
      command: ["sh", "-c"]
      args:
      - while true; do
          echo -en '\n';
          printenv NODE_NAME POD_NAME NAMESPACE;
          printenv NODE_IP POD_IP POD_SRVCACCT;
          sleep 10;
        done;
